// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`executeSwap can be invoked with localnet options 1`] = `
[
  [
    3,
    "0x62633171617230737272723778666b7679356c3634336c79646e77397265353967747a7a7766356d6471",
    5,
    "0x456",
    "1",
    [],
  ],
]
`;

exports[`executeSwap can be invoked with localnet options 2`] = `
[
  [
    "MY ADDRESS",
    "0x123",
  ],
]
`;

exports[`executeSwap can be invoked with localnet options 3`] = `
[
  [
    "0x123",
    "1",
  ],
]
`;

exports[`executeSwap submits a native swap ({"destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destChainId": 1, "destTokenSymbol": "FLIP"}) 1`] = `
[
  [
    1,
    "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
    2,
    [],
    {
      "value": "1",
    },
  ],
]
`;

exports[`executeSwap submits a native swap ({"destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destChainId": 1, "destTokenSymbol": "USDC"}) 1`] = `
[
  [
    1,
    "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
    3,
    [],
    {
      "value": "1",
    },
  ],
]
`;

exports[`executeSwap submits a native swap ({"destAddress": "5F3sa2TJAWMqDhXG6jhV4N8ko9SxwGy8TpaNS1repo5EYjQX", "destChainId": 2, "destTokenSymbol": "DOT"}) 1`] = `
[
  [
    2,
    "0x841226ea070c9577979ca2e854130fbe3253853c13c05943e09908312950275d",
    4,
    [],
    {
      "value": "1",
    },
  ],
]
`;

exports[`executeSwap submits a native swap ({"destAddress": "bc1qar0srrr7xfkvy5l643lydnw9re59gtzzwf5mdq", "destChainId": 3, "destTokenSymbol": "BTC"}) 1`] = `
[
  [
    3,
    "0x62633171617230737272723778666b7679356c3634336c79646e77397265353967747a7a7766356d6471",
    5,
    [],
    {
      "value": "1",
    },
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destChainId": 1, "destTokenSymbol": "ETH", "srcTokenSymbol": "FLIP"}) 1`] = `
[
  [
    1,
    "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
    1,
    "0x8e3D3250470314f2e8C1eC6062Df43B5d67B5b7d",
    "1",
    [],
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destChainId": 1, "destTokenSymbol": "ETH", "srcTokenSymbol": "FLIP"}) 2`] = `
[
  [
    "MY ADDRESS",
    "0xBFF0d5051bC984ee6fF052b26ADBaFB5F1cDF9d4",
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destChainId": 1, "destTokenSymbol": "ETH", "srcTokenSymbol": "USDC"}) 1`] = `
[
  [
    1,
    "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
    1,
    "0x07865c6E87B9F70255377e024ace6630C1Eaa37F",
    "1",
    [],
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2", "destChainId": 1, "destTokenSymbol": "ETH", "srcTokenSymbol": "USDC"}) 2`] = `
[
  [
    "MY ADDRESS",
    "0xBFF0d5051bC984ee6fF052b26ADBaFB5F1cDF9d4",
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "5F3sa2TJAWMqDhXG6jhV4N8ko9SxwGy8TpaNS1repo5EYjQX", "destChainId": 2, "destTokenSymbol": "DOT", "srcTokenSymbol": "FLIP"}) 1`] = `
[
  [
    2,
    "0x841226ea070c9577979ca2e854130fbe3253853c13c05943e09908312950275d",
    4,
    "0x8e3D3250470314f2e8C1eC6062Df43B5d67B5b7d",
    "1",
    [],
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "5F3sa2TJAWMqDhXG6jhV4N8ko9SxwGy8TpaNS1repo5EYjQX", "destChainId": 2, "destTokenSymbol": "DOT", "srcTokenSymbol": "FLIP"}) 2`] = `
[
  [
    "MY ADDRESS",
    "0xBFF0d5051bC984ee6fF052b26ADBaFB5F1cDF9d4",
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "5F3sa2TJAWMqDhXG6jhV4N8ko9SxwGy8TpaNS1repo5EYjQX", "destChainId": 2, "destTokenSymbol": "DOT", "srcTokenSymbol": "USDC"}) 1`] = `
[
  [
    2,
    "0x841226ea070c9577979ca2e854130fbe3253853c13c05943e09908312950275d",
    4,
    "0x07865c6E87B9F70255377e024ace6630C1Eaa37F",
    "1",
    [],
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "5F3sa2TJAWMqDhXG6jhV4N8ko9SxwGy8TpaNS1repo5EYjQX", "destChainId": 2, "destTokenSymbol": "DOT", "srcTokenSymbol": "USDC"}) 2`] = `
[
  [
    "MY ADDRESS",
    "0xBFF0d5051bC984ee6fF052b26ADBaFB5F1cDF9d4",
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "bc1qar0srrr7xfkvy5l643lydnw9re59gtzzwf5mdq", "destChainId": 3, "destTokenSymbol": "BTC", "srcTokenSymbol": "FLIP"}) 1`] = `
[
  [
    3,
    "0x62633171617230737272723778666b7679356c3634336c79646e77397265353967747a7a7766356d6471",
    5,
    "0x8e3D3250470314f2e8C1eC6062Df43B5d67B5b7d",
    "1",
    [],
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "bc1qar0srrr7xfkvy5l643lydnw9re59gtzzwf5mdq", "destChainId": 3, "destTokenSymbol": "BTC", "srcTokenSymbol": "FLIP"}) 2`] = `
[
  [
    "MY ADDRESS",
    "0xBFF0d5051bC984ee6fF052b26ADBaFB5F1cDF9d4",
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "bc1qar0srrr7xfkvy5l643lydnw9re59gtzzwf5mdq", "destChainId": 3, "destTokenSymbol": "BTC", "srcTokenSymbol": "USDC"}) 1`] = `
[
  [
    3,
    "0x62633171617230737272723778666b7679356c3634336c79646e77397265353967747a7a7766356d6471",
    5,
    "0x07865c6E87B9F70255377e024ace6630C1Eaa37F",
    "1",
    [],
  ],
]
`;

exports[`executeSwap submits a token swap ({"destAddress": "bc1qar0srrr7xfkvy5l643lydnw9re59gtzzwf5mdq", "destChainId": 3, "destTokenSymbol": "BTC", "srcTokenSymbol": "USDC"}) 2`] = `
[
  [
    "MY ADDRESS",
    "0xBFF0d5051bC984ee6fF052b26ADBaFB5F1cDF9d4",
  ],
]
`;

exports[`executeSwap submits a token swap with approval 1`] = `
[
  [
    3,
    "0x62633171617230737272723778666b7679356c3634336c79646e77397265353967747a7a7766356d6471",
    5,
    "0x8e3D3250470314f2e8C1eC6062Df43B5d67B5b7d",
    "1",
    [],
  ],
]
`;

exports[`executeSwap submits a token swap with approval 2`] = `
[
  [
    "MY ADDRESS",
    "0xBFF0d5051bC984ee6fF052b26ADBaFB5F1cDF9d4",
  ],
]
`;

exports[`executeSwap submits a token swap with approval 3`] = `
[
  [
    "0xBFF0d5051bC984ee6fF052b26ADBaFB5F1cDF9d4",
    "1",
  ],
]
`;
